fix overflow mobile

--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ h5 {
 }
 
 div{
-    overflow: hidden;
+/*    overflow: hidden;*/
 }
 
 /* preloader
